Update to fix extra white space on the right side of the body

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,15 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 html {
     background-color: #efefef;
 }
